Fix for miss-alignment on diff screen sizes.

--- a/src/styles/md-steppers.scss
+++ b/src/styles/md-steppers.scss
@@ -394,6 +394,7 @@ md-step {
     text-overflow: ellipsis;
     display: flex;
     flex-direction: row;
+    flex: 1;
 
     &::before {
         background: rgba(0, 0, 0, 0.25);
